--- a/README.html
+++ b/README.html
@@ -15,11 +15,15 @@ it may work with &#8220;FileMaker Pro&#8221;.</p>
 
 <p>The source code is in a horrible state and the outline code is buggy. Usually I need this app once per project, so the incentive for a more polished app is near zero. YMMV.</p>
 
+<h2 id="downloadgoestodropbox">Download (goes to dropbox)</h2>
+
+<p>http://goo.gl/AZVMVj</p>
+
 <h2 id="usage">Usage</h2>
 
 <ul>
-<li><p>Make sure that you use &#8220;FileMaker Pro Advanced&#8221;</p></li>
-<li><p>Make sure you have a backup of the database</p></li>
+<li><p>Make sure that you use &#8220;FileMaker Pro Advanced&#8221;. If you can open all files and put them into layout mode, it should work with &#8220;FileMaker Pro&#8221;.</p></li>
+<li><p>Make sure you have a backup of the databases.</p></li>
 <li><p>Start your FileMaker database with <strong>[Full Access]</strong> and make sure all files are open.</p></li>
 <li><p>Start FMPLayoutExporter</p></li>
 <li><p>The app will iterate through all the database files and switch them to layout mode.</p></li>
