--- a/README.html
+++ b/README.html
@@ -15,9 +15,9 @@ it may work with &#8220;FileMaker Pro&#8221;.</p>
 
 <p>The source code is in a horrible state and the outline code is buggy. Usually I need this app once per project, so the incentive for a more polished app is near zero. YMMV.</p>
 
-<h2 id="downloadgoestodropbox">Download (goes to dropbox)</h2>
+<h2 id="download">Download</h2>
 
-<p>http://goo.gl/AZVMVj</p>
+<p>dropbox: http://goo.gl/AZVMVj</p>
 
 <h2 id="usage">Usage</h2>
 
@@ -37,7 +37,3 @@ DBNAME_LAYOUTINDEX_LAYOUTNAME.pdf and
 DBNAME_LAYOUTINDEX_LAYOUTNAME.xml</p></li>
 <li><p>Quit the application.</p></li>
 </ul>
-
-<h2 id="whatisitgoodfor">What is it good for?</h2>
-
-<p>The important part </p>
